--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -88,6 +88,9 @@
         "typeindex": "cpp",
         "typeinfo": "cpp",
         "valarray": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "cerrno": "cpp",
+        "queue": "cpp",
+        "stack": "cpp"
     }
 }
