settings and template

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -94,6 +94,9 @@
         "stack": "cpp",
         "__node_handle": "cpp",
         "__split_buffer": "cpp",
-        "filesystem": "cpp"
+        "filesystem": "cpp",
+        "format": "cpp",
+        "stdfloat": "cpp",
+        "__nullptr": "cpp"
     }
 }
