feat: added debug functions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -97,6 +97,9 @@
         "filesystem": "cpp",
         "format": "cpp",
         "stdfloat": "cpp",
-        "__nullptr": "cpp"
+        "__nullptr": "cpp",
+        "__bit_reference": "cpp",
+        "__hash_table": "cpp",
+        "__tree": "cpp"
     }
 }
