--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -31,6 +31,7 @@
                 "-Wall",
                 "-Wextra",
                 "-O2",
+                "-I${workspaceFolder}",
                 "${file}",
                 "-o",
                 "${fileDirname}/${fileBasenameNoExtension}"
