--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -28,10 +28,8 @@
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
-                "-Wall",
-                "-Wextra",
-                "-O2",
                 "-I${workspaceFolder}",
+                "-DLOCAL_RUN",
                 "${file}",
                 "-o",
                 "${fileDirname}/${fileBasenameNoExtension}"
