--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -28,6 +28,7 @@
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
+                "-std=c++20",
                 "-O2",
                 "-I${workspaceFolder}",
                 "-DLOCAL_RUN",
