--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -27,6 +27,7 @@
             "command": "/bin/g++",
             "args": [
                 "-fdiagnostics-color=always",
+                "-std=c++20",
                 "-g",
                 "-O2",
                 "-I${workspaceFolder}",
