--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -26,7 +26,6 @@
             "type": "cppbuild",
             "command": "/bin/g++",
             "args": [
-                // imp -> imp for pre-compiled header
                 // -02 -Winvalid-pch -fsanitize=address -std=c++20
                 // Recompile if any above flags are changed
                 "-DLOCAL_RUN",
@@ -36,7 +35,7 @@
                 "-fsanitize=address",
                 "-std=c++20",
                 "-Wall",
-                "-Wconversion", // For conversion warning
+                // "-Wconversion", // For conversion warning
                 "-fdiagnostics-color=always", // For color
                 "-g", // For debugging
                 "${file}",
